# easyticket-api

./: .justfile  Cargo.toml  justfile
migrations/: 000001_create_ticket_table.sql
src/: main.rs
src/db/: connection.rs
src/handlers/: mod.rs  ticket.rs
src/models/: ticket.rs  user.rs
src/routes/: mod.rs
