[package]
name = "easyticket-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
chrono = { version = "0.4.38", features = ["serde"] }
dotenv = "0.15.0"
refinery = "0.8.14"
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
tokio = { version = "1.39.2", features = ["full"] }
tokio-postgres = "0.7.11"
